tests/negative/test_fnc_redef_same_sig_ret_type.orb
fnc foo (x:i32) () {};
fnc foo (y:i32) i32 { ret 0; };

fnc main () () {};